XWIKI-20699: Annotations are pointing to the old document after move (#2205)
(cherry picked from commit f1662fefa3c6dfa91a95f26380f316dd340dc0dd)